--- a/style.css
+++ b/style.css
@@ -553,7 +553,7 @@ color: yellowgreen;
 .hero {
     text-align: center;
     padding: 80px 20px;
-    background-image: url('https://img.freepik.com/free-photo/glasses-lie-laptop-reflecting-light-from-screen-dark_169016-52267.jpg');
+    background-image: url('');
     background-size: cover;
     background-position: center;
     color: white;
@@ -573,7 +573,7 @@ body {
     padding-top: auto; /* Adjust to match the height of your navbar */
 }
 footer {
-    background: rgba(0, 0, 0, 0.5);
+    background-color: #333;
     color: #fff;
     text-align: center;
     padding: 20px;
