--- a/style.css
+++ b/style.css
@@ -169,6 +169,9 @@ li a:hover {
 a {
     text-decoration: none;
 }
+a:hover {
+    text-decoration: none;
+}
 
 .hero-section::before {
     content: "";
@@ -208,12 +211,14 @@ a {
     flex-direction: column;
     align-items: center;
     gap: 8px;
+    text-decoration: none;
 }
 
 .icon-label {
     font-size: 14px;
     font-weight: bold;
     color: #fff;
+    text-decoration: none;
 }
 
 .icon-container {
@@ -236,6 +241,7 @@ a {
 .icon-container i {
     font-size: 24px;
     color: white;
+    text-decoration: none;
 }
 
 .cta-button {
